tests/ui/impl-trait/higher-ranked-lifetime-capture-deduplication.edition2024.stderr
error[E0657]: `impl Trait` cannot capture higher-ranked lifetime from outer `impl Trait`
  --> $DIR/higher-ranked-lifetime-capture-deduplication.rs:19:44
   |
LL | fn f() -> impl for<'a, 'b> Trait<'a, Out = impl Sized + 'a + 'b> {
   |                                            ^^^^^^^^^^^^^--^^^--
   |                                            |
   |                                            `impl Trait` implicitly captures all lifetimes in scope
   |
note: lifetime declared here
  --> $DIR/higher-ranked-lifetime-capture-deduplication.rs:19:20
   |
LL | fn f() -> impl for<'a, 'b> Trait<'a, Out = impl Sized + 'a + 'b> {
   |                    ^^  ^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0657`.
